--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Weather Prediction App</title>
+  <title>Weather-App</title>
 <script
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
-    ></script><link rel="stylesheet" href="./style.css">
+    ></script>
+    <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
+
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
