--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
-
+    <link rel="shortcut icon" href="logo1.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
 
 </head>
